# code_agent_context_hooks

./: .clippy.toml  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  QWEN.md  Taskfile.yml  rustfmt.toml
.claude/: hooks.yaml  settings.local.json
.claude/commands/: cch-release.md
.claude/context/: explain-command.md
.claude/validators/: no-console-log.py  slow-validator.py
.github/workflows/: ci.yml  e2e.yml  iq-validation.yml  release.yml  validation.yml
.opencode/command/: speckit-analyze.md  speckit-checklist.md  speckit-clarify.md  speckit-constitution.md  speckit-implement.md  speckit-plan.md  speckit-specify.md  speckit-tasks.md  speckit-taskstoissues.md
.specify/memory/: constitution.md
.speckit/: constitution.md  features.md
.speckit/checklists/: phase2-governance-checklist.md  rulez-ui-checklist.md
.speckit/templates/: plan-template.md
cch_cli/: Cargo.toml  Taskfile.yml
cch_cli/src/: cli.rs  config.rs  hooks.rs  lib.rs  logging.rs  main.rs  models.rs
cch_cli/src/cli/: debug.rs  explain.rs  init.rs  install.rs  logs.rs  validate.rs
cch_cli/tests/: e2e_git_push_block.rs  iq_installation.rs  iq_new_commands.rs  oq_us1_blocking.rs  oq_us2_injection.rs  oq_us3_validators.rs  oq_us4_permissions.rs  oq_us5_logging.rs  pq_memory.rs  pq_performance.rs
cch_cli/tests/common/: mod.rs
cch_cli/tests/fixtures/events/: cdk-file-edit-event.json  claude-code-git-push.json  claude-code-git-status.json  console-log-write-event.json  force-push-event.json  permission-request-event.json  safe-push-event.json
cch_cli/tests/fixtures/expected/: allowed-response.json  blocked-response.json
cch_cli/tests/fixtures/hooks/: block-all-push.yaml  block-force-push.yaml  inject-skill-context.yaml  permission-explanations.yaml  validate-no-console.yaml
cch_cli/tests/fixtures/validators/: no-console-log.py
docs/: BACKLOG.md  wiki-mapping-process.md  wiki-mapping.yml
docs/devops/: BRANCHING.md  CI_TIERS.md  RELEASE_PROCESS.md
docs/plans/: rulez_ui_plan.md  sdd_claude_tasks.md
docs/prds/: rulez_ui_prd.md
docs/validation/: README.md
mastering-hooks/assets/: check-secrets.sh  hooks-template.yaml  python-standards.md
mastering-hooks/references/: cli-commands.md  hooks-yaml-schema.md  quick-reference.md  rule-patterns.md  troubleshooting-guide.md
rulez_ui/: .gitignore  README.md  Taskfile.yml  biome.json  bunfig.toml  index.html  index.ts  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vite.config.ts
rulez_ui/src/: App.tsx  main.tsx  vite-env.d.ts
rulez_ui/src-tauri/: Cargo.toml  tauri.conf.json
rulez_ui/src-tauri/src/: main.rs
rulez_ui/src-tauri/src/commands/: config.rs  debug.rs
rulez_ui/tests/: app.spec.ts  editor.spec.ts  file-ops.spec.ts  simulator.spec.ts  tree-view.spec.ts
scripts/: collect-iq-evidence.sh  collect-oq-evidence.sh  collect-pq-evidence.sh  generate-validation-report.sh
specs/001-cch-binary-v1/: data-model.md  quickstart.md  research.md  tasks.md
test/integration/: run-all.sh
(+126 files in other folders)
